added enum and validation
