# app/pkg/models/user.model.go
@@ -2,6 +2,7 @@ package models
 
 import "go.mongodb.org/mongo-driver/bson/primitive"
 
+// swagger:parameters UserModel
 type UserModel struct {
 	Id          primitive.ObjectID  `json:"_id"`
 	SubId       string              `json:"subId" validate:"required"`
@@ -12,7 +13,7 @@ type UserModel struct {
 	Email       string              `json:"email" validate:"required,email"`
 	PhoneNumber *string             `json:"phoneNumber,omitempty"`
 	BirthDate   *primitive.DateTime `json:"birthDate,omitempty"`
-	Gender      *string             `json:"gender,omitempty"`
+	Gender      Gender              `json:"gender" validate:"enum" example:"female"`
 	Media       *Media              `json:"media,omitempty"`
 }
 
